# dory

./: .claude-tasks.md  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  COMPATIBILITY.md  COMPETITOR_ISSUE_COVERAGE.md  CONTRIBUTING.md  DESTRUCTIVE_ACTIONS.md  DORY_V0.4_RESEARCH_REPORT.md  PERFORMANCE_QUALIFICATION.md  POST_V0.4_PRODUCT_DESIGNS.md  README.md  RELEASE_FEATURE_AUDIT.md  RELEASE_READINESS.md  SANDBOX_THREAT_MODEL.md  rust-toolchain.toml
.github/: FUNDING.yml  dependabot.yml
Casks/: dory.rb
Config/: Dory-Info.plist  dev.dory.network-helper.plist
Dory/: ContentView.swift  Dory.entitlements  DoryApp.swift
Dory.xcodeproj/: project.pbxproj
DoryStorageProvider/: DoryStorageProvider.entitlements  FileProviderExtension.swift  Info.plist
DoryStorageShared/: DoryStorageInventorySnapshot.swift
DoryTests/: AgentModeTests.swift  AppStoreEnvAllowListTests.swift  BuildxCLITests.swift  ComposeCLITests.swift  ComposeEngineTests.swift  ComposeMergeTagTests.swift  ComposeTests.swift  ComposeVolumeWiringTests.swift  ContainerActionsTests.swift  ContainerListStateTests.swift  CredentialBridgeTests.swift  DesktopMachineAssetTests.swift  DockerDiskUsageParserTests.swift  DockerEngineRuntimePerformanceTests.swift  DockerEngineSocketDiscoveryTests.swift  DockerShimArchTests.swift  DockerStorageInventoryTests.swift  DoryTests.swift  DorydClientTests.swift  DorydLaunchAgentTests.swift  EngineServicesTests.swift  ExecArgsTests.swift  ExposeTunnelTests.swift  ExternalTerminalTests.swift  HostBridgeTests.swift  HostDockerCLITests.swift  HostToolsTests.swift  ImageSearchTests.swift  KubeClientArgsTests.swift  KubeExecCommandTests.swift  KubeLogParserTests.swift  (+60 more)
dory-core/agent/: Cargo.toml
dory-core/agent/src/: daemon.rs  dispatch.rs  exec.rs  fsevents.rs  handler.rs  lib.rs  main.rs  proc_net.rs  reaper.rs  sync_apply.rs  terminal.rs  vsock_server.rs
dory-core/ffi/: Cargo.toml
dory-core/ffi/src/: agent_forward.rs  lib.rs  remote.rs
dory-core/remote/: Cargo.toml
dory-core/remote/src/: agent_client.rs  error.rs  keys.rs  lib.rs  ssh.rs  sync_push.rs
dory-core/remote/tests/: real_agent_over_tcp.rs  sync_push_e2e.rs
dory-core/transfer-helper/: Cargo.toml
dory-core/transfer-helper/src/: lib.rs  main.rs  model.rs  repair_linux.rs  scan_linux.rs
(+679 files in other folders)
