[package]
name = "dory-agent"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "dory_agent"
path = "src/lib.rs"

[[bin]]
name = "dory-agent"
path = "src/main.rs"

[dependencies]
dory-proto = { path = "../proto" }
dory-pb = { path = "../pb" }
dory-sync = { path = "../sync" }
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "process"] }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.7"
